fix: use junit5 due to failing tests (illegal state)